# sequel

./: .gitignore  Cargo.toml  README.md  run.sh  your_program.sh
.codecrafters/: compile.sh  run.sh
src/: database.rs  main.rs  parser.rs  record.rs
